--- a/CommonProblems.wiki
+++ b/CommonProblems.wiki
@@ -9,27 +9,16 @@ See UriRewriting.
 
 == Files aren't cached in IE6 ==
 
-If you have 2.1.3:
+*Use Minify 2.1.4+*.
+
+For Minify 2.1.3 and below:
 
   # Open `/min/lib/HTTP/Encoder.php`
   # On line [http://code.google.com/p/minify/source/browse/tags/release_2.1.3/min/lib/HTTP/Encoder.php#62 62], change `false` to `true`.
 
-Details on the [http://code.google.com/p/minify/issues/detail?id=126 issue] page, but basically this allows sending gzipped content to IE6 and (more importantly) allows IE6 to cache it.
-
 == Builder Fails / 400 Errors ==
 
-With URLs like `/min/f=...`, Minify is paranoid about not serving files outside of `$_SERVER['DOCUMENT_ROOT']`. If you're trying to serve files that are actually symlinks (or in a symlinked folder) to files outside of the DOC_ROOT, Minify won't allow it by default. You can see the cause of 400 responses using FirePHP (See [Debugging]).
-
-=== Example ===
-
-Your DOC_ROOT is `/var/www`, but `/var/www/css` is actually a symlink to `/var/shared/css`. To serve `/min/f=css/site.css`, we must explicitly add the symlink target folder to the `allowDirs` option:
-{{{
-$min_serveOptions['allowDirs'] = array(
-    '//', // DOC_ROOT
-    '/var/shared/css'
-);
-}}}
-Now Minify can serve files whose `realpath()` is in `/var/shared/css`.
+*Use Minify 2.1.4+*, and you can see the cause of 400 responses using FirePHP (See [Debugging]).
 
 == Dealing with Javascript errors ==
 
@@ -104,7 +93,7 @@ return (/'/); // no error
 
 == Can't specify more than 10 files via URL ==
 
-In `config.php` edit the setting `$min_serveOptions['minApp']['maxFiles']`.
+Use Minify 2.1.4+. Before there was a setting to adjust the maximum allowed.
 
 == See Also ==
 
