--- a/Debugging.wiki
+++ b/Debugging.wiki
@@ -1,33 +1,58 @@
 #summary Debugging problems
 #labels Phase-Implementation,Featured
 
+= Server Errors = 
+
+|| *Code* || *Most likely cause* ||
+|| 400 || Controller failed to return valid set of sources to serve ||
+|| 500 || Minifier threw exception (e.g. JSMin choked on syntax) ||
+
+You can find details by enabling FirePHP logging:
+
+  # Install/enable [https://addons.mozilla.org/en-US/firefox/addon/6149 FirePHP].
+  # Open Firebug's console
+  # Set `$min_errorLogger = true;` in min/config.php
+  # Reload the Minify URL
+
+Hopefully you'll see the error appear:
+
+{{{
+Minify: Something bad happened!
+}}}
+
 = Javascript/CSS Problems =
 
 When Javascript errors occur, or URIs in CSS files are incorrectly rewritten, enable "debug mode" to ease debugging combined files:
 
- # Set `$min_allowDebugFlag = 'true'` in min/config.php
- # Append `&debug` to the Minify URI. E.g. `/min/?f=script1.js,script2.js&debug`
+  # Set `$min_allowDebugFlag = 'true'` in min/config.php
+  # Append `&debug` to the Minify URI. E.g. `/min/?f=script1.js,script2.js&debug` (or use the bookmarklet provided by /min/builder/)
 
-Comments will be inserted into the output showing you the line number of the original file(s). E.g.: 
+In "debug mode":
+
+  * comments are inserted into the output showing you line numbers in the original file(s)
+  * no minification is performed
+  * In CSS, URI rewriting _is_ performed
+  * In CSS, a leading comment shows how URIs were rewritten.
+
+Example: a combination of two Javascript files in debug mode
 
 {{{
-/* waitFor.jquery.js */
+/* firstFile.js */
 
 /* 1  */ (function () {
-/* 2  */ 	if (window._waitFor$) {
+/* 2  */ 	if (window.foo) {
 ...
-/* 10 */ 	}
 /* 11 */ })();
 
 ;
-/* QueryString.js */
+/* secondFile.js */
 
-/* 1   */ var MrClay = window.MrClay || {};
-/* 2   */ 
+/* 1   */ var Foo = window.Foo || {};
+/* 2   */
 ...
 }}}
 
-CSS output will be appended with a comment showing how any relative URIs were rewritten. E.g.:
+Example: Top of CSS output in debug mode
 
 {{{
 docRoot    : M:\home\foo\www
@@ -42,20 +67,6 @@ file-relative URI  : ../images/bg.jpg
 path prepended     : M:\home\foo\www\css\..\images\bg.jpg
 docroot stripped   : \css\..\images\bg.jpg
 traversals removed : /images/bg.jpg
-}}}
-
-= 400 Bad Request errors =
-
-If Minify can't serve a file for some reason, you'll get a `400 Bad Request` error.
-
- # Set `$min_errorLogger = true;` in min/config.php
- # Install and enable [https://addons.mozilla.org/en-US/firefox/addon/6149 FirePHP].
- # Reload the URL in Firefox and open Firebug's console
-
-Hopefully you'll see the error appear (misspelled "jquery"):
-
-{{{
-Minify: Path "M:/home/foo/www/js/jqueryy.js" failed realpath()
 }}}
 
 == See Also ==
