--- a/CommonProblems.wiki
+++ b/CommonProblems.wiki
@@ -105,6 +105,12 @@ return /'/;   // JSMin throws error
 return (/'/); // no error
 }}}
 
+== Output is distorted/random chars ==
+
+What you're seeing is a mismatch between the content encoding the browser expects and what it receives. 
+
+The usual problem is that a global PHP or web server configuration is causing the output of PHP scripts to be automatically gzipped. Since Minify already outputs gzipped content, the browser receives "double encoded" content which it interprets as noise. The Builder app in 2.1.4 sometimes can tell you which component is causing the auto-encoding.
+
 == Can't specify more than 10 files via URL ==
 
 Use Minify 2.1.4+. Before there was a setting to adjust the maximum allowed.
